[package]
name = "sfu"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.7.1"
async-executor = "1.4.1"
async-lock = "2.6.0"
async-oneshot = "0.5.0"
async-trait = "0.1.58"
atomic-take = "1.0.0"
event-listener-primitives = "2.0.1"
fastrand = "1.8.0"
futures-lite = "1.12.0"
h264-profile-level-id = "0.1.1"
hash_hasher = "2.0.3"
log = "0.4.17"
nohash-hasher = "0.2.0"
once_cell = "1.16.0"
serde_json = "1.0.87"
serde_repr = "0.1.9"
thiserror = "1.0.37"
lru = { version = "0.8.1", default-features = false }
mediasoup-sys = "0.5.4"
mediasoup = "0.11.4"
parking_lot = { version = "0.12.1", features = ["serde"] }
regex = { version = "1.6.0", default-features = false, features = ["std", "perf"] }
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
# [dev-dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
async-io = "1.10.0"
criterion = "0.4.0"
env_logger = "0.9.1"
portpicker = "0.1.1"
actix-web = { version = "4.2.1", default-features = false, features = ["macros"] }