[package]
name = "sfu"
version = "0.1.0"
edition = "2021"

[dependencies]
mediasoup = { version = "0.17.1" }
num_cpus = { version = "1.16.0" }
tokio = { version = "1.41.0", features = ["full"] }
rand = { version = "0.8.5" }
axum = { version = "0.7.7", features = ["ws"]}
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# hyper = "0.14"
# tower-http = { version = "0.5.2", features = ["cors"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }

# headers = "0.4"
# tokio = { version = "1.0", features = ["full"] }
# tokio-tungstenite = "0.24.0"
# tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = { version = "0.13" }